--- a/src/app.scss
+++ b/src/app.scss
@@ -8,7 +8,7 @@ html {
 }
 
 .app-wrapper {
-  margin-top: 4rem;
+  padding-top: 3rem;
 }
 
 .left-bar {
@@ -22,6 +22,6 @@ html {
 
 .content-area {
   padding-left: $left-bar-width;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 750px;
+  min-width: 400px;
 }
