--- a/src/layout/app.scss
+++ b/src/layout/app.scss
@@ -1,4 +1,4 @@
-@import '../node_modules/d2-ui/lib/css/HeaderBar.css';
+@import '../../node_modules/d2-ui/lib/css/HeaderBar.css';
 
 $left-bar-width: 295px;
 
