--- a/src/personalAccessTokens/tokenCard/TokenCard.module.css
+++ b/src/personalAccessTokens/tokenCard/TokenCard.module.css
@@ -4,6 +4,7 @@
     padding: var(--spacers-dp16);
     border-radius: 3px;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+    background: var(--colors-grey050);
 }
 
 .newToken {
