--- a/src/account/twoFactor/TwoFactorStatus.module.css
+++ b/src/account/twoFactor/TwoFactorStatus.module.css
@@ -1,7 +1,4 @@
 .statusHeader {
-    font-weight: 500;
-    font-size: 1.2rem;
-    margin: 0;
-    display: inline-flex;
-    gap: 8px;
+    width: 100%;
+    margin: var(--spacers-dp16) 0 var(--spacers-dp32);
 }
