--- a/src/account/twoFactor/TwoFactorToggler.module.css
+++ b/src/account/twoFactor/TwoFactorToggler.module.css
@@ -1,11 +1,8 @@
 .container {
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
-    gap: 16px;
-    /* prevent content shift when showing error */
-    min-height: 80px;
-    margin-bottom: 16px;
-}
-.button {
-    margin-top: 18px;
+    gap: var(--spacers-dp8);
+    margin-bottom: var(--spacers-dp24);
+    padding-left: var(--spacers-dp24);
 }
