--- a/src/layout/app.css
+++ b/src/layout/app.css
@@ -26,9 +26,10 @@ html, body {
   margin: 0;
 }
 
-.noticebox-wrapper{
-  margin-right: 15px;
+.noticebox-wrapper {
+  margin-inline-end: 15px;
 }
+
 
 .info-cell-name {
   color: #777;
