--- a/src/account/twoFactor/TwoFactor.module.css
+++ b/src/account/twoFactor/TwoFactor.module.css
@@ -11,3 +11,11 @@
     max-width: 960px;
     height: auto;
 }
+
+.introductionText {
+    font-size: 14px;
+    line-height: 19px;
+    max-width: 720px;
+    margin: 0 0 var(--spacers-dp24);
+    color: var(--colors-grey700);
+}
