fix: minor bugs after testing

--- a/src/account/twoFactor/TwoFactor.module.css
+++ b/src/account/twoFactor/TwoFactor.module.css
@@ -19,3 +19,7 @@
     margin: 0 0 var(--spacers-dp24);
     color: var(--colors-grey700);
 }
+
+.emailVerificationWarning {
+    margin: var(--spacers-dp24) 0;
+}
