--- a/src/account/twoFactor/TwoFactor.module.css
+++ b/src/account/twoFactor/TwoFactor.module.css
@@ -23,3 +23,13 @@
 .emailVerificationWarning {
     margin: var(--spacers-dp24) 0;
 }
+
+.instructionsHeader {
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--colors-grey900);
+}
+
+.twoFactorTypeToggle {
+    margin: var(--spacers-dp24) 0
+}
