feat: show email update warning with email 2fa [DHIS2-18832]

--- a/src/layout/EmailField.component.module.css
+++ b/src/layout/EmailField.component.module.css
@@ -10,6 +10,10 @@
     margin-block-end: 16px;
 }
 
+.emailModalText div {
+    margin-block-end: 8px;
+}
+
 .buttonContainer {
     display: flex;
     gap: 8px;
