fix(app-platform): upgrade platform tools to use vite and react 18 (#1476)
* chore: bump dhis2 dependencies

* chore: remove react, react-dom and deduplicate dependencies

* chore: run d2 migrate script

* chore: update test dependencies

* fix(app-platform): upgrade platform tools to use vite and react 18

* fix: use new createRoot

* fix: update dhis2 dependencies

---------

Co-authored-by: Birk Johansson <birk@dhis2.org>

--- a/src/account/twoFactor/TwoFactorEnableInstructions.module.css
+++ b/src/account/twoFactor/TwoFactorEnableInstructions.module.css
@@ -4,7 +4,6 @@
     display: block;
 }
 
-
 .orderedList {
     padding-inline-start: 24px;
     font-size: 14px;
@@ -26,15 +25,15 @@
     gap: var(--spacers-dp4);
 }
 
-.errorMessage{
+.errorMessage {
     color: #d3302f;
     margin: var(--spacers-dp4);
 }
 
-.successMessage{
+.successMessage {
     display: flex;
     align-items: center;
-    gap: var(--spacers-dp8);;
+    gap: var(--spacers-dp8);
     margin: var(--spacers-dp4);
 }
 .sendNewCodeInstructions {
@@ -45,13 +44,13 @@
 }
 
 .sendNewCodeButton {
-    color: blue;         /* Standard link color */
+    color: blue; /* Standard link color */
     text-decoration: underline; /* Adds the underline like a link */
-    cursor: pointer;     /* Makes it look clickable */
+    cursor: pointer; /* Makes it look clickable */
 }
 
 .sendNewCodeButton:hover {
-    color: darkblue;     /* Darker color on hover like a real link */
+    color: darkblue; /* Darker color on hover like a real link */
     text-decoration: none; /* Remove underline on hover (optional) */
 }
 
